--- a/build.properties
+++ b/build.properties
@@ -83,8 +83,8 @@ oracle.driver.class=oracle.jdbc.driver.OracleDriver
 p6spy.driver.class=com.p6spy.engine.spy.P6SpyDriver
 mysql.ojb.sequence.manager=org.apache.ojb.broker.platforms.KualiMySQLSequenceManagerImpl
 oracle.ojb.sequence.manager=org.apache.ojb.broker.util.sequence.SequenceManagerNextValImpl
-mysql.workflow.datasource.platform=org.kuali.rice.core.database.platform.MySQLPlatform
-oracle.workflow.datasource.platform=org.kuali.rice.core.database.platform.OraclePlatform
+mysql.server.datasource.platform=org.kuali.rice.core.database.platform.MySQLPlatform
+oracle.server.datasource.platform=org.kuali.rice.core.database.platform.OraclePlatform
 
 # miscellaneous build.xml configuration
 
@@ -355,40 +355,16 @@ ksb.mode=local
 rice.use.standalone.workflow=false
 
 # settings for the datasource used by embedded workflow when using a standalone workflow server
-rice.workflow.datasource.username=${datasource.username}
-rice.workflow.datasource.password=${datasource.password}
-rice.workflow.datasource.pool.size=${datasource.pool.size}
-rice.workflow.datasource.connection.timeout=${datasource.connection.timeout}
-rice.workflow.datasource.validating.query=${datasource.validating.query}
-rice.workflow.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
+rice.server.datasource.username=${datasource.username}
+rice.server.datasource.password=${datasource.password}
+rice.server.datasource.pool.size=${datasource.pool.size}
+rice.server.datasource.connection.timeout=${datasource.connection.timeout}
+rice.server.datasource.validating.query=${datasource.validating.query}
+rice.server.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
 # commented out since the build process sets these dynamically 
-#rice.workflow.datasource.platform=${datasource.platform}
-#rice.workflow.datasource.url=${datasource.url}
-#rice.workflow.datasource.driver.class=${datasource.driver.class}
-
-# settings for the datasource used for the KSB registry when using a standalone workflow server
-rice.ksb.datasource.username=${datasource.username}
-rice.ksb.datasource.password=${datasource.password}
-rice.ksb.datasource.pool.size=${datasource.pool.size}
-rice.ksb.datasource.connection.timeout=${datasource.connection.timeout}
-rice.ksb.datasource.validating.query=${datasource.validating.query}
-rice.ksb.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
-# commented out since the build process sets these dynamically 
-#rice.ksb.datasource.platform=${datasource.platform}
-#rice.ksb.datasource.url=${datasource.url}
-#rice.ksb.datasource.driver.class=${datasource.driver.class}
-
-# settings for the datasource used by embedded KIM when using a standalone rice server
-rice.kim.datasource.username=${datasource.username}
-rice.kim.datasource.password=${datasource.password}
-rice.kim.datasource.pool.size=${datasource.pool.size}
-rice.kim.datasource.connection.timeout=${datasource.connection.timeout}
-rice.kim.datasource.validating.query=${datasource.validating.query}
-rice.kim.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
-# commented out since the build process sets these dynamically 
-#rice.kim.datasource.platform=${datasource.platform}
-#rice.kim.datasource.url=${datasource.url}
-#rice.kim.datasource.driver.class=${datasource.driver.class}
+#rice.server.datasource.platform=${datasource.platform}
+#rice.server.datasource.url=${datasource.url}
+#rice.server.datasource.driver.class=${datasource.driver.class}
 
 # KIM Cache Settings
 
