KULCAP-1074 	 barcode error document- global replace requirements

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2233,6 +2233,7 @@ error.document.capitalAsset.retired=Asset is retired
 error.document.duplicated.tagNumber=Tag number is in use on more than one active asset
 error.document.locked.asset=Asset is locked by document {0}
 error.approve.document.with.error.exist=Document has error(s) not corrected yet. You need to correct all of them to proceed.
+error.global.replace.empty.fields=At least one field in the search criteria must contain data. 
 #**** End - Asset Barcode Inventory
 
 #*********************************************
