KULCAP-1038 	 During Non-Movable asset separate of a land asset in the location did not highlight in red the correct information.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2221,6 +2221,7 @@ error.location.oncampus.not.permitted = On campus information is not permitted f
 error.oncampus.room.number.not.permitted = Room number is not permitted for asset type {0}.
 error.oncampus.sub.room.number.not.permitted = Sub room number is not permitted for asset type {0}.
 error.choose.asset.type.validate.location = Asset type value should be specified for validating asset location.
+error.location.not.permitted.asset.type = {0} is not permitted for asset type {1}.
 #****** End - Asset Location Edit Messages *********
 
 #**** Start - Capital Asset Barcode Inventory
