KFSMI-149: DV choose pay type non employee travel or prepaid travel do not receive the popup saying the respective tabs need to be filled in

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -651,6 +651,9 @@ warning.dv.paymentReason.research = Note: For Payment reason {0}, {1} are the on
 warning.dv.paymentReason.moving = Note: If a payee is a vendor, the ownership type of the vendor must be {0} (Individual/Sole Proprietor).
 warning.dv.paymentReason.prepaidTravel = Note: An active vendor employee cannot be paid for prepaid travel, and should be paid through the travel system for travel related expenses.
 
+warning.dv.paymentReason.prepaidTravelTab = Payment reason of Travel Payment for prepaid travel requires the prepaid travel tab to be completed.
+warning.dv.paymentReason.nonEmployeeTravelTab = Payment reason of Travel Payment for a Nonemployee requires the nonemployee travel tab to be completed.
+
 question.dv.clearUnneededTab=The {0} for this disbursement voucher is {1}.  The {2} tab should not contain data if the {0} is not {3}.  Would you like to clear the tab?  Press YES to clear the tab and continue routing.  Press NO to return to the document for further editing.
 
 #ElectronicPaymentClaims
