add ability to remove warning and info messages from error map
KFSMI-2225 KULRICE-2920 KFSMI-1897   	 KULRICE-2912

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -19,19 +19,19 @@ error.document.customerInvoiceWriteoff.invalidExplanation=Explanation must be at
 document.question.cancel.text=Are you sure you want to cancel? 
 
 document.question.delete.text=Are you sure you want to delete?
-document.question.deleteContext.text=Are you sure you want to delete <b>{0}</b>?
-document.journalVoucher.question.changeBalanceType.singleAmountToCreditDebitMode.text=Changing the balance type of this journal from <font color\="red">{0}</font> to <font color\="red">{1}</font><br> will eliminate the single amount field.  Instead, you'll be presented with credit and<br> debit amount fields to enter dollar amounts into.  When this change is made, the<br> amount for each accounting line will be reset to "$0.00".<br> {3}<br> All other values for the accounting lines will remain the same.<br><br><br> Are you sure you want to change the balance 0type for this journal voucher<br> document from <font color\="red">{0}</font> to <font color\="red">{1}</font>?
+document.question.deleteContext.text=Are you sure you want to delete [b]{0}[/b]?
+document.journalVoucher.question.changeBalanceType.singleAmountToCreditDebitMode.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will eliminate the single amount field.  Instead, you'll be presented with credit and[br] debit amount fields to enter dollar amounts into.  When this change is made, the[br] amount for each accounting line will be reset to "$0.00".[br] {3}[br] All other values for the accounting lines will remain the same.[br][br][br] Are you sure you want to change the balance 0type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
 document.journalVoucher.question.changeBalanceType.singleAmountToCreditDebitMode.externalEncumbrance.text=In addition, this change will introduce three new fields - "Ref Origin Code",<br> "Ref Number", and "Ref Type Code" fields, since they specifically apply to the <font color\="red">{1}</font> balance type.
-document.journalVoucher.question.changeBalanceType.creditDebitToSingleAmountMode.text=Changing the balance type of this journal from <font color\="red">{0}</font> to <font color\="red">{1}</font><br> will eliminate the debit and credit amount fields.  Instead, you'll be presented with a single<br> amount field to enter dollar amounts into.  When this change is made, the<br> amount for each accounting line will be reset to "$0.00".<br> {3}<br> All other values for the accounting lines will remain the same.<br><br><br> Are you sure you want to change the balance type for this journal voucher<br> document from <font color\="red">{0}</font> to <font color\="red">{1}</font>?
+document.journalVoucher.question.changeBalanceType.creditDebitToSingleAmountMode.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will eliminate the debit and credit amount fields.  Instead, you'll be presented with a single[br] amount field to enter dollar amounts into.  When this change is made, the[br] amount for each accounting line will be reset to "$0.00".[br] {3}[br] All other values for the accounting lines will remain the same.[br][br][br] Are you sure you want to change the balance type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
 document.journalVoucher.question.changeBalanceType.creditDebitToSingleAmountMode.externalEncumbrance.text=In addition, the change will eliminate the "Ref Origin Code", "Ref Number",<br> and "Ref Type Code" fields, since they will no longer apply.
-document.journalVoucher.question.changeBalanceType.externalEncumbranceToNonExternalEncumbrance.text=Changing the balance type of this journal from <font color\="red">{0}</font> to <font color\="red">{1}</font><br> will eliminate the "Ref Origin Code", "Ref Number", and "Ref Type Code" fields, since they will no longer apply.<br><br><br> Are you sure you want to change the balance type for this journal voucher<br> document from <font color\="red">{0}</font> to <font color\="red">{1}</font>?
-document.journalVoucher.question.changeBalanceType.NonExternalEncumbranceToExternalEncumbrance.text=Changing the balance type of this journal from <font color\="red">{0}</font> to <font color\="red">{1}</font><br> will introduce three new fields - "Ref Origin Code", "Ref Number", and "Ref Type Code" fields,<br> since they specifically apply to the <font color\="red">{1}</font> balance type.<br><br><br> Are you sure you want to change the balance type for this journal voucher<br> document from <font color\="red">{0}</font> to <font color\="red">{1}</font>?
-document.journalVoucher.question.routeOutOfBalance.text=The <b>debit</b> total of ${0} does not match the <b>credit</b> total of ${1}. This Journal Voucher document is out of balance.<br><br>Do you still want to approve this Journal Voucher document?
-document.journalVoucher.question.routeOutOfBalanceSingleAmountMode.text=The total of this Journal Voucher document is ${0}. This Journal Voucher document is out of balance.<br><br>Do you still want to approve this Journal Voucher document?
+document.journalVoucher.question.changeBalanceType.externalEncumbranceToNonExternalEncumbrance.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will eliminate the "Ref Origin Code", "Ref Number", and "Ref Type Code" fields, since they will no longer apply.[br][br][br] Are you sure you want to change the balance type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
+document.journalVoucher.question.changeBalanceType.NonExternalEncumbranceToExternalEncumbrance.text=Changing the balance type of this journal from [font red]{0}[/font] to [font red]{1}[/font][br] will introduce three new fields - "Ref Origin Code", "Ref Number", and "Ref Type Code" fields,[br] since they specifically apply to the [font red]{1}[/font] balance type.[br][br][br] Are you sure you want to change the balance type for this journal voucher[br] document from [font red]{0}[/font] to [font red]{1}[/font]?
+document.journalVoucher.question.routeOutOfBalance.text=The [b]debit[/b] total of ${0} does not match the [b]credit[/b] total of ${1}. This Journal Voucher document is out of balance.[br][br]Do you still want to approve this Journal Voucher document?
+document.journalVoucher.question.routeOutOfBalanceSingleAmountMode.text=The total of this Journal Voucher document is ${0}. This Journal Voucher document is out of balance.[br][br]Do you still want to approve this Journal Voucher document?
 document.question.selectContinuationAccount.text=The account number {1} for {0} has expired. Would you rather use its continuation account ({2})?"
 document.question.saveBeforeClose.text=Would you like to save this document before you close it?
 document.question.allowInactiveObjectLevel.text=Object Level is inactive. Object Level Chart = {0}, Object Level Code = {1}, Object Level Name = {2}.  Do you want to use the inactive Object Level?
-document.question.disapprove.text=Are you sure you want to <b>disapprove</b> this document?
+document.question.disapprove.text=Are you sure you want to [b]disapprove[/b] this document?
 
 # lookup specific
 multiple.value.lookup.icon.label=Look Up/Add Multiple {0} Lines
@@ -1024,7 +1024,7 @@ error.vendorTax.beginDateAfterEnd=The backup withholding begin date must be befo
 error.vendor.w9Andw8.receivedIndicator.BothTrue= Both W9 and W-8BEN Received Indicator cannot be set to Yes.
 
 
-message.vendorMaint.confirm.change.to.parent=Continuing with this action will make this division, {0}, the parent for this corporate structure <br>and turn the existing parent, {1}, into a division. <br>Do you wish to continue?
+message.vendorMaint.confirm.change.to.parent=Continuing with this action will make this division, {0}, the parent for this corporate structure [br]and turn the existing parent, {1}, into a division. [br]Do you wish to continue?
 message.vendorMaint.parent.to.division=This vendor was changed to a division by document #{0}. New parent vendor is {1}.
 # Vendor Lookup
 error.vendorLookup.name.too.short=If a portion of the Vendor Name is specified, it must be at least {0} characters in length.
@@ -1120,8 +1120,8 @@ error.requisition.copy.expired.contract=The Requisition cannot be copied because
 error.requisition.copy.inactive.vendor=The Requisition cannot be copied because its vendor is inactive.
 error.distribute.accounts.not.100.percent=The total percentage of all accounts to be distributed must equal 100%.
 error.purchaseOrder.invalid = The Purchase Order is invalid, forwarding to system error.
-purchaseOrder.question.text=Are you sure you want to <b>{0}</b> this Purchase Order?
-purchaseOrder.split.question.text=Are you sure you want to <b>Split</b> this Purchase Order? Continuing after this page will result in the loss of any unsaved data.
+purchaseOrder.question.text=Are you sure you want to [b]{0}[/b] this Purchase Order?
+purchaseOrder.split.question.text=Are you sure you want to [b]Split[/b] this Purchase Order? Continuing after this page will result in the loss of any unsaved data.
 purchaseOrder.question.manual.status.change=Please confirm that you want to manually change this Purchase Order's status.
 purchaseOrder.manual.status.change.note.prefix=Manual status change from {0} to {1} :
 purchaseOrder.route.message.close.text=Your Purchase Order Close request was successfully submitted.
@@ -1171,7 +1171,7 @@ error.purchaseOrder.alternateVendor.dvType=An alternate payee vendor must not be
 error.purchaseOrder.alternateVendor.debarred=An alternate payee vendor must not be debarred.
 error.purchaseOrder.receivingDocRequiredId.pendingPreq=The receiving required indicator cannot be Yes while there are pending Payment Requests.  
 
-warning.purchaseOrder.encumber.nextFY=Warning: This PO will encumber against next fiscal year's budget. If the product or service will be shipped or performed before the end of the year then the year may need to be changed.<br>Do you want to continue?  Select "No" to change the year or "Yes" to continue the routing.
+warning.purchaseOrder.encumber.nextFY=Warning: This PO will encumber against next fiscal year's budget. If the product or service will be shipped or performed before the end of the year then the year may need to be changed.[br]Do you want to continue?  Select "No" to change the year or "Yes" to continue the routing.
 error.nextFY.beginDate.invalid=Begin Date must be within the fiscal year for which you are encumbering funds.
 
 error.purchaseOrder.quoteList.no.vendor=The Purchase Order Quote List must contain at least one vendor.
@@ -1298,7 +1298,7 @@ creditMemo.question.removeHold.text=A note is required to remove hold on a Credi
 errors.receivingLine.documentActiveForPo=Cannot create document, an existing Receiving Document (ID {0}) is in process for Purchase Order (ID {1})
 errors.receiving.lineitem.required=At least one item should be entered.
 message.duplicate.receivingLine.prefix=Warning: A Receiving Line Document for the Purchase Order (ID {0}) with the same<br><br>
-message.duplicate.receivingLine.suffix=<br>Do you want to continue?
+message.duplicate.receivingLine.suffix=[br]Do you want to continue?
 message.duplicate.receivngLine.vendorDate=Vendor Date already exists<br>
 message.duplicate.receivingLine.packingSlipNumber=Packing Slip Number already exists<br>
 message.duplicate.receivingLine.billOfLadingNumber=Bill of Lading Number already exists<br>
