--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -97,6 +97,8 @@ message.send.note.notification.successful=Note notification was successfully sen
 message.note.notification.annotation={0} has requested that {1} view the following note for this document\: \n {2}
 
 # Document Error Messages
+error.user.missing.permission={0} does not have permission {1} {2}.
+
 error.document.parameter.parameterType.invalid=The Parameter Type is not valid for a parameter with the given namespace.
 error.document.parameter.workgroupName.invalid=The entered workgroup ({0}) does not exist.
 error.document.parameter.workgroupName.notinboth=The initiator must be in both the old and new workgroups to edit this parameter.
