--- a/.classpath
+++ b/.classpath
@@ -20,7 +20,7 @@
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-digester-1.7.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-fileupload-1.1.1.jar"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-fileupload-1.2.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-httpclient-3.0.1.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-io-1.2.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/commons-logging-1.1.jar"/>
@@ -74,7 +74,7 @@
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jboss-common-core-2.0.4.GA.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/persistence-api-1.0.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-api-0.9.4-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-0.9.4-SNAPSHOT.jar" sourcepath="/rice"/>
+	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/rice-impl-0.9.4-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/cxf-2.1.3.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-api-2.1.jar"/>
 	<classpathentry kind="lib" path="work/web-root/WEB-INF/lib/jaxb-impl-2.1.7.jar"/>
