Fix for broken unit test.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1200,6 +1200,7 @@ requisition.nonAPO.requisition.contains.alternate.vendor.names=Requisition conta
 requisition.nonAPO.requisition.contains.inactive.commodity.code=Requisition contains inactive commodity codes.
 requisition.nonAPO.requisition.missing.commodity.code=There are missing commodity code(s).
 requisition.nonAPO.requisition.contains.commodity.code.sensitive.data=Requisition contains an item that is marked as sensitive data.
+requisition.nonAPO.requisition.contains.restricted.commodity.code=Requisition contains an item with a restricted commodity code.
 requisition.nonAPO.missing.some.vendor.address.fields=Requisition does not have all of the vendor address fields that are required for Purchase Order.
 requisition.nonAPO.capital.asset.rules=Requisition has failed Capital Asset rules.
 requisition.nonAPO.outside.nextFY.approval.range=Requisition is set to encumber next fiscal year and approval is not within APO allowed date range.
