KULCAP-1130 	 Should not be able to Merge an asset that was currently out on Loan

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2161,8 +2161,8 @@ error.receiving.org.chart.code.invalid = Receiving Owner Org Chart code {0} is n
 error.receiving.org.acct.invalid= Receiving Owner Account {0} is not valid for chart {1}.
 error.transfer.fund.financial.doc.invalid= Transfer of funds financial document number doesnt exist or is not approved yet.
 error.transfer.fund.financial.doc.required = Transfer of funds financial document number is required for an inter-departmental sale.
-#warn.asset.loan.active=Warning! Asset is loaned, do you want to proceed with transfer. A note will be added to the document indicating the loan activity.
 error.transfer.asset.loaned=Asset is currently on Loan and cannot be transferred until a return document has been issued and approved to return the asset to an on campus location.
+error.retirement.asset.loaned=Asset is currently on Loan and cannot be retire until a return document has been issued and approved to return the asset to an on campus location.
 note.asset.loan.active=The asset being transferred is currently on loan.
 error.representative.user.invalid= {0} is not a valid user.
 error.transfer.document.payment.objectcode.doesnt.exists=Payment object code {0} does not exist in fiscal year {1} for chart the asset is being transfer to.
