KFSMI-2477 / KFSMI-3065: Balancing job now does data initialization automatically with JDBC. Also various code review fixes.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2364,8 +2364,8 @@ cab.error.data.edit.lock = This version of data has already been modified by ano
 # Balancing batch process messages
 error.batch.balancing.files=Input files not found or not readable.
 error.batch.balancing.unknown.failure=Process stopped due to %s on line number %d
-message.batch.balancing.data.inserted=%s or %s empty. Use something like the following to populate your local tables. Note obj_id needs to be properly generated (for oracle use sys_guid()). Also your table / field names may be different\:\n\n
-message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for universityFiscalYear\=%d found. That is out of range and will be deleted.\n"
+message.batch.balancing.data.insert=%s or %s empty. Running populates on history tables.\n\n
+message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for fiscal year of %d found. That is out of range and will be deleted.\n"
 message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n
 message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=
 message.batch.balancing.record.failed.balancing=Failed %s balancing
@@ -2379,6 +2379,7 @@ message.gl.balancing.report.balance.label=GLBL
 message.gl.balancing.report.account.balance.label=ACBL
 message.gl.balancing.report.encumbrance.label=GLEC
 message.gl.balancing.report.fiscal.years.included=\                             FISCAL YEARS INCLUDED IN BALANCING              %s\n
+message.gl.balancing.report.history.tables.initialized=\                             HISTORY TABLES INITIALIZED - UPDATES SKIPPED     %9s\n
 message.gl.balancing.report.obsolete.deleted=\                             OBSOLETE HISTORY DELETED                         %9s\n
 message.gl.balancing.report.updated.skipped=\                             UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d\n
 message.gl.balancing.report.comparision.failure=\                             %s AMOUNT FAILURES   %-25s %,9d\n
