--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -716,6 +716,7 @@ error.gl.ReversalDateNotInUniversityDateTable=Date from reversal not in Universi
 error.gl.ObjectCodeNotFoundFor=Unable to find object code in table for 
 error.gl.InvalidOffsetObjectCode=Offset Object Code is invalid 
 error.gl.NoOriginEntryGroups=No Origin Entry Groups Found.
+error.gl.EncumbranceUpdateCodeCannotBeBlankForBalanceType = Encumbrance update code cannot be blank for balance type:
 
 warning.gl.IndirectCostRecoveryGeneration.A21SubAccount.icrField.blankInvalid=The {0} of {1} {2} is blank or invalid; using ICR information from {3} {4} instead. 
 
