--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -121,7 +121,7 @@ footer.orgAccountSummary = Organization Account Summary -
 footer.orgSubFundSummary = Organization Sub-Fund Summary - 
 footer.orgLevelSummary = Organization Level Summary -
 footer.orgObjectSummary = Organization Object Summary -
-footer.orgAccountObjectSummary = Organization Account / Object Summary -
+footer.orgAccountObjectSummary = Organization Account / Object Detail -
 footer.orgAccountFundingDetail = Organization Account Funding Detail -
 footer.orgPositionFunding = Organization Position Funding -  
 footer.orgMonthlySummary = Organization Monthly Object Summary -
