--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1974,6 +1974,9 @@ error.document.customer.zipCodeIsRequiredWhenCountryUS = "Error: Customer Zip Co
 error.document.customer.addressInternationalProvinceNameIsRequiredWhenCountryNonUS = "Error: Customer International Province Name is required when country is non US."
 error.document.customer.internationalMailCodeIsRequiredWhenCountryNonUS = "Error: Customer International Mail Code is required when country is non US."
 error.document.customer.taxNumberRequired= "Error: Tax Number is required."
+error.document.customer.endDateMustBeFutureDate= "Error: Address End Date must be future date."
+error.document.customer.endDateMustBeCurrenOrFutureDate= "Error: Address End Date must be current date or future date."
+error.document.customer.primaryAddressMustHaveFutureEndDate= "Error: Primary Customer Address must be active (Address End Date must be future date)."
 
 # Accounts Receivable: Customer Batch Upload
 message.ar.customerLoad.batchUpload.title=Customer Batch Upload
