--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1300,6 +1300,7 @@ creditMemo.question.removeHold.text=A note is required to remove hold on a Credi
 
 # Receiving Line
 errors.receivingLine.documentActiveForPo=Cannot create document, an existing Receiving Document (ID {0}) is in process for Purchase Order (ID {1})
+errors.receivingLine.poNotActive=Cannot create document, Purchase Order {0} is not active.
 errors.receiving.lineitem.required=At least one item should be entered.
 message.duplicate.receivingLine.prefix=Warning: A Receiving Line Document for the Purchase Order (ID {0}) with the same<br><br>
 message.duplicate.receivingLine.suffix=[br]Do you want to continue?
