fix deposit wizard question

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -833,7 +833,7 @@ error.deposit.notEnoughCashToCompleteDeposit=The {0} requested for the deposit, 
 error.deposit.cashieringChecksMustBeDeposited=Cashiering Check #{0} must be part of a deposit.
 
 # Deposit Wizard
-depositWizard.status.noCashReceipts= No verified Cash Receipt Documents are currently available for Verification Unit {0}.<br><br>Hit 'refresh' to search again, or 'cancel' to return to Cash Management Document {1}.
+depositWizard.status.noCashReceipts= No verified Cash Receipt Documents are currently available for Verification Unit {0}.[br][br]Hit 'refresh' to search again, or 'cancel' to return to Cash Management Document {1}.
 
 # Cash Management document
 url.load.document.cashManagement=<a href="financialCashManagement.do?methodToCall=docHandler&docId={0}&command=displayDocSearchView" target="new">{0}</a>
