KFSMI-3317: fix error message for accounting line accessible validation

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -178,7 +178,7 @@ error.accountingLineParser.invalidFileFormat={0} is an unsupported file format. 
 
 error.accountingLine.inaccessibleAdd=Accounting lines for account {0} may not be added by user {1}
 error.accountingLine.inaccessibleDelete=Accounting lines for account {0} may not be deleted by user {1}
-error.accountingLine.inaccessibleUpdate=Existing accounting lines may not be updated to use account {0} by user {1}
+error.accountingLine.inaccessibleUpdate=Existing accounting lines may not be updated to use {0} {1} by user {2}.
 error.accountingLine.inaccessibleAdd.noServiceBillingControl=Account {0} has not been added to the Service Billing Control table and therefore is not valid in the income section.
 error.accountingLine.inaccessibleDelete.noServiceBillingControl=Account {0} has not been added to the Service Billing Control table and therefore is not valid in the income section.
 error.accountingLine.inaccessibleUpdate.noServiceBillingControl=Account {0} has not been added to the Service Billing Control table and therefore is not valid in the income section.
