Changed the error message a bit for trade in, KULPURAP-3677

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1085,7 +1085,7 @@ errors.item.capitalAsset.no.tranType=On {0}, a Capital Asset Transaction Type su
 errors.item.capitalAsset.assetNumber.must.be.longValue.notNull=The capital asset number must be a valid whole number and not null.
 errors.item.tradeIn.outstanding.encumbered.amount.negative=There is unused trade in. Please {0}.
 errors.item.tradeIn.needs.to.be.assigned=The trade in item exists. Please assign at least one line item to trade in or remove the trade in item.
-errors.summary.accounts.list.empty=The accounts to be prorated are empty. Please enter accounts on the line items to be prorated.
+errors.summary.accounts.list.empty=The trade-in pro-rating is not able to be completed because not all line items that are assigned to trade in do not contain accounts.
 warning.item.tradeIn.amount.unused=There is an unused trade in amount from PO that you could apply to line item.
 warnings.item.capitalAsset.threshold.objectCodeLevel=On {0}, the unit cost of this purchase is ${1} or more. Movable equipment with a unit cost of ${1} or more and a useful life greater than one year requires the use of a capital asset Object Code.
 
