--- a/build.properties
+++ b/build.properties
@@ -399,16 +399,17 @@ rice.output.src.suffix=-sources.jar
 rice.output.doc.suffix=-javadoc.jar
 rice.excludes=kcb*/**/**,ken*/**/**,kim*/**/**,kns*/**/**,kew*/**/**,web*/**/**,ksb*/**/**
 rice.output.classes.directories=${rice.output.directories}classes/**/**
-dependencies.project.directory=${projects.directory}/kfs-dependencies
+dependencies.project.directory=${projects.directory}/${ant.project.name}-dependencies
 rice.project.directory=${projects.directory}/${rice.name}
 rice.web.directory=${rice.project.directory}/web/src/main/webapp
 
 
 # 4. RELEASE PACKAGING PROPERTIES
 
-release.zip.name=../kfs-release-2-2.zip
-release.kfs.cvs.module=kuali_project
-release.database.cvs.module=kfs-cfg-dbs
+release=3-0
+release.zip.name=../${ant.project.name}-release-${release}.zip
+release.kfs.cvs.module=${ant.project.name}
+release.database.cvs.module=${ant.project.name}-cfg-dbs
 release.impex.tool.cvs.module=kul-cfg-dbs
 release.rice.cvs.module=${rice.name}
 release.patches.dir=patches
