--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -256,6 +256,7 @@ error.document.accountDelegateMaintenance.userNotActive = Only persons with a st
 error.document.accountDelegateMaintenance.notActiveKualiUser = The delegate user must be an active Kuali user.
 error.document.accountDelegateMaintenance.userNotProfessional = Only persons with a type of Professional maybe be selected as Delegates.  The person selected is not of this type.
 error.document.accountDelegateMaintenance.acctNotClosed = The account that you have chosen is currently closed. Please choose another account that is open and active.
+error.document.delegateMaintenance.invalidFinancialSystemDocumentTypeCode=The document type code you entered {0} does not have as an ancestor the Financial System root document type ({1}), and therefore cannot be used for an account delegate.
 
 error.document.delegateGlobal.noDelegate = You must enter at least 1 delegate.
 error.document.delegateGlobal.noActiveDelegate = At least one delegate must be active.
