KFSMI-2048 and KFSMI-3109

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -543,6 +543,9 @@ label.document.disbursementVoucher.printCoverSheet=Print Disbursement Voucher Co
 # Org Review Role error messages
 error.member.none.selected=At least one member must be selected.
 error.member.already.assigned=This member is already associated with the role.
+error.member.fromamount.outofrange=From amount for a delegate cannot be lesser than that for its role member. 
+error.member.toamount.outofrange=To amount for a delegate cannot be greater than that for its role member.
+
 
 # DV Messages
 message.wiretransfer.fee=FYI:  Foreign wires may take 10-15 business days to reach their destination.
