--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2313,6 +2313,13 @@ note.trickleDownInactivation.inactivatedSubAccounts.recordAlreadyMaintenanceLock
 note.trickleDownInactivation.inactivatedSubObjects=The following Sub-Object(s) were inactivated: {0}.
 note.trickleDownInactivation.inactivatedSubObjects.errorDuringPersistence=The following Sub-Object(s) were not inactivated because of an error: {0}.
 note.trickleDownInactivation.inactivatedSubObjects.recordAlreadyMaintenanceLocked=The Sub-Object {0} cannot be inactivated because it is locked by document {1}.
+
+note.trickleDownInactivation.inactivatedOrganizationReversionDetail=The following Organization Reversion Details (s) were inactivated: {0}.
+note.trickleDownInactivation.inactivatedOrganizationReversionDetail.errorDuringPersistence=The following Organization Reversion Details (s) were not inactivated because of an error: {0}.
+note.trickleDownActivation.activatedOrganizationReversionDetail=The following Organization Reversion Details (s) were activated: {0}.
+note.trickleDownActivation.activatedOrganizationReversionDetail.errorDuringPersistence=The following Organization Reversion Details (s) were not activated because of an error: {0}.
+
+
 message.kra.subcontractorReminder=Reminder: The first $25,000 of each subcontract should be budgeted in one of the "first 25K" subcategories. The "first 25K" subcategories should not be copied forward into future periods.
 
 accounting.line.actions.header.label=Actions
