KULPURAP-2035 KULPURAP-2036 KULPURAP-3405 Several fixes bundled all dealing with account expired.  Purchasing documents should now display a new error message when encountering expired accounts, and Accounts Payable documents should not show an error, but the existing purap warning message and logic should run. A fix for showing AP users a warning about expired accounts being replaced is also now fixed.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1074,7 +1074,7 @@ errors.item.accounting.total={0} has invalid totals. The total percent of the ac
 errors.item.percent=All {0}s of {1} must be whole numbers between 1-100; including no commas are allowed in numeric fields
 errors.item.accounting.rounding=The accounting dollars you have entered on accounting line {0} cannot be represented with the level of accuracy inherent in the system. The entry has been adjusted by {1}. If this system amount is not satisfactory, a GEC will need to be processed to adjust the accounting.
 errors.item.accounting.dollar.total={0} has invalid totals. The edited amount is {1}. The total of the accounting lines must equal {2}.
-errors.item.accounting.expired={0} Expired Account # {1}.
+errors.item.accounting.expired=Account {0} has expired. This document does not allow the usage of expired accounts.
 errors.item.belowTheLine.noUnitCost=No accounts can be entered on below the line item {0} that have no unit cost.
 errors.item.capitalAsset.capital.and.expense=On {0}, Object Codes must be all capital or all expense.  Object Code {1} is inconsistent with prior accounts' Object Codes.
 errors.item.capitalAsset.tranType.objectCodeSubtype=On {0}, a Capital Asset Transaction Type of {1} is invalid with Object Code {2}.  To change Transaction Type to fit the Object Code, you may need to first change Recurring Payment Type.
