KULBUD-156 Organization Position Funding

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -21,6 +21,7 @@ header.Name = Name
 header.SObj = SObj
 header.Cls = Cls
 header.AP = AP
+header.Sts = Sts
 header.Posn = Posn#
 header.Position = Position
 header.WMPM = WM/PM
