--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -786,6 +786,10 @@ error.gl.ReferenceOriginCodeNotFound = Reference Origin Code not found in the da
 error.gl.ReferenceFields=If one reference field is provided all reference fields must be provided.
 error.gl.DescriptionCannotBeBlank=Description cannot be blank.
 
+error.labor.PayrollEndDateFiscalPeriodCodeNotFound = Payroll End Date Fiscal Period not found in the DB.
+error.labor.PayrollEndDateFiscalYearNotFound = Payroll End Date Fiscal Year not found in the DB.
+
+
 # Advance Deposit document
 error.document.advanceDeposit.requiredNumberOfAdvanceDepositsNotMet=This document must contain at least one advance deposit before it can be submitted.
 error.document.advanceDeposit.balance=This document is out of balance.  The accounting line total must equal the advance deposit total.
