--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2012,6 +2012,7 @@ error.document.invoiceRecurrenceMaintenance.invoiceMustBeApproved=The invoice mu
 error.document.invoiceRecurrenceMaintenance.maintenanceDocumentsExists=A maintenance document already exists for this invoice.
 error.document.invoiceRecurrenceMaintenance.beginDateMustBeEarlierThanToday=Recurrence Begin Date must be later than today.
 error.document.invoiceRecurrenceMaintenance.invoiceDoesNotExist=Invoice Number does not exist.
+error.document.invoiceRecurrenceMaintenance.beginDateIsRequired=Recurrence Begin Date is required.
 error.document.invoiceRecurrenceMaintenance.endDateEarlierThanBeginDate=Recurrence End Date must be greater than Begin Date.
 error.document.invoiceRecurrenceMaintenance.enterEndDateOrTotalNumberOfRecurrences=Either End Date or Total Number of Recurrences must be entered.
 error.document.invoiceRecurrenceMaintenance.totalRecurrencesMoreThanAllowed=Total Number of Recurrences must be "{0}" or less.
@@ -2020,6 +2021,8 @@ error.document.invoiceRecurrenceMaintenance.intervalCodeIsRequired=Recurrence In
 error.document.invoiceRecurrenceMaintenance.workgroupIsRequired=Workgroup Identifier is required.
 error.document.invoiceRecurrenceMaintenance.workgroupIsInvalid=Workgroup Identifier must be valid and active.
 error.document.invoiceRecurrenceMaintenance.initiatorIsRequired=Invoice Initiator is required.
+error.document.invoiceRecurrenceMaintenance.notEnoughDataToGenerateRecurrence=The following information is required to generated the recurrence:
+error.document.invoiceRecurrenceMaintenance.activeIndicatorMustBeTrue=Active Indicator must be checked. 
 
 #Accounts Receivable: Customer Invoice errors
 error.document.customerInvoiceDocument.invalidCustomerInvoiceDetailTotalAmount=Total Amount for invoice detail is invalid.
