Some changes to improve error messages, and adjust the label of one field to remove the word 'zip'. KULAR-766

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1945,7 +1945,7 @@ error.SystemInformation.lockboxNumberNotUnique = Lockbox Number must be unique.
 
 #Accounts Receivable: Organization Options errors
 error.document.organizationOptions.sysInfoDoesNotExistForProcessingChartAndOrg=System Information must exist for Processing Chart of Accounts code "{0}" and Processing Organization Code "{1}".
-error.document.organizationOptions.orgOptionsZipCodeRequired=Organization Option Postal Code is required.
+error.document.organizationOptions.orgOptionsZipCodeRequired=Organization Option Postal Code is required when Sales Tax is enabled.
 
 # Accounts Receivable: Cash Control errors and messages
 message.ar.createdByCashControlDocument= Created by Cash Control Document.
