KULBUD-164 adjusted business rules for Quick Salary Setting

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1639,6 +1639,7 @@ error.budget.adjustmentPercentRequired = Adjustment percent is required.
 error.budget.fteAmountGreaterThanZero = FTE amount must be greater than zero.
 error.budget.timePercentGreaterThanZero = Time percent must be greater than zero.
 error.budget.requestedSalaryIsNonnegative = Requested salary amount must be non-negative.
+error.budget.requestedSalaryNeedsFteFirst= Requested salary must have non-zero FTE first, set request to  zero and perform detail salary setting to set FTE.
 error.budget.budgetDocumentNotFound = Budget construction document not found for the appointment funding: {0}.
 error.budget.emptyPayRateAnnualAmount = Pay rate or requested amount must be entered.
 error.budget.noActiveJobFound = No active jobs found for employee {0} and position {1}.
