KULAR-732, KULAR-773, KULAR-774 and KULAR-775

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2007,6 +2007,8 @@ error.document.customerCreditMemoDocument.onlyOneCRMInRoutePerInvoice=The invoic
 error.document.customerCreditMemoDocument.invRefNumberIsRequired=Invoice Ref. Number is a required field.
 warning.documnet.customerCreditMemoDocument.invoiceHasAppliedDiscount=You are crediting the invoice with discount(s) and the discount(s) won't be adjusted. Do you want to continue?     
 error.document.customerCreditMemoDocument.noDataToSubmit=There is no data to submit.    
+error.document.customerCreditMemoDocument.invoiceHasBeenCorrected=The invoice is invalid for credit memo because it has been error corrected.
+error.document.customerCreditMemoDocument.invoiceCorrectsAnotherInvoice=The invoice is invalid for credit memo because it corrects another invoice.
     
 #Accounts Receivable: Invoice Recurrence errors/warnings
 error.document.invoiceRecurrenceMaintenance.invoiceMustBeApproved=The invoice must have an approved status.
